@@ -30,6 +30,7 @@
 
 #include "glclock.h"
 
+#include "autowidget.h"
 #include <gtk/gtk.h>
 #include <libintl.h>
 #ifdef HAVE_GETOPT_H
@@ -154,8 +155,8 @@ main (int argc, char **argv)
 
       glc = new glclock ();
 
-      GtkItemFactory *ifactory
-	= gtk_item_factory_new(GTK_TYPE_MENU_BAR, "<Window>", NULL);
+      GtkObject_ptr<GtkItemFactory> ifactory
+	(gtk_item_factory_new(GTK_TYPE_MENU_BAR, "<Window>", NULL));
       GtkItemFactoryEntry entries[]
 	=
       {
@@ -163,34 +164,35 @@ main (int argc, char **argv)
 	{_("/_File/"), NULL, NULL, 0, "<Separator>"},
 	{_("/_File/_About..."), NULL, NULL, 2, "<Item>"}
       };
-      gtk_item_factory_create_items(ifactory, 3, entries, ifactory);
+      gtk_item_factory_create_items(ifactory.get(), 3, entries,
+				    ifactory.get());
       // Unimplemented menu items.
-      gtk_widget_set_sensitive(gtk_item_factory_get_widget_by_action(ifactory,
+      gtk_widget_set_sensitive(gtk_item_factory_get_widget_by_action(ifactory.get(),
 								     1),
 			       FALSE);
-      gtk_widget_set_sensitive(gtk_item_factory_get_widget_by_action(ifactory,
+      gtk_widget_set_sensitive(gtk_item_factory_get_widget_by_action(ifactory.get(),
 								     2),
 			       FALSE);
 
       {
-	GtkWidget *box1 = gtk_vbox_new(FALSE, 0);
+	GtkObject_ptr<GtkWidget> box1(gtk_vbox_new(FALSE, 0));
 	{
 	  gtk_widget_show(ifactory->widget);
-	  gtk_box_pack_start(GTK_BOX(box1), ifactory->widget,
+	  gtk_box_pack_start(GTK_BOX(box1.get()), ifactory->widget,
 			     FALSE, FALSE, 0);
 
-	  GtkWidget *content = glc->create_widget();
-	  gtk_widget_show(content);
-	  gtk_box_pack_start(GTK_BOX(box1), content, TRUE, TRUE, 0);
+	  GtkObject_ptr<GtkWidget> content (glc->create_widget());
+	  gtk_widget_show(content.get());
+	  gtk_box_pack_start(GTK_BOX(box1.get()), content.get(),
+			     TRUE, TRUE, 0);
 	}
-	gtk_widget_show(box1);
-	gtk_container_add(GTK_CONTAINER(toplevel), box1);
+	gtk_widget_show(box1.get());
+	gtk_container_add(GTK_CONTAINER(toplevel), box1.get());
       }
 
       gtk_widget_show (toplevel);
       gtk_main ();
 
-      gtk_object_unref(GTK_OBJECT(ifactory));
       gtk_widget_hide(toplevel);
       delete glc;
       gtk_widget_destroy(toplevel);
